a style sheet added to fix the overflow and just some little mistake

--- a/styles/style.css
+++ b/styles/style.css
@@ -15,6 +15,6 @@ section, .container-fluid, .row {
 
 /* Ensure padding doesn’t break layout */
 section {
-  padding-left: 1rem;
-  padding-right: 1rem;
+  /* padding-left: 1rem;
+  padding-right: 1rem; */
 }
